# peeky-blinders

./: .gitignore  LICENSE  Makefile  README.md  build.bash  peeky-blinders.cabal  ptr-peeker.cabal  stack.yaml
.github/workflows/: pages-haddock.yaml  release.yaml
bench/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.12.2/: package.cache  peeky-blinders-0.1-inplace.conf
dist-newstyle/tmp/src-3410/store-0.7.20/: ChangeLog.md  README.md  store.cabal
dist-newstyle/tmp/src-3410/store-0.7.20/bench/: Bench.hs
dist-newstyle/tmp/src-3410/store-0.7.20/src/Data/: Store.hs
dist-newstyle/tmp/src-3410/store-0.7.20/src/Data/Store/: Impl.hs  Internal.hs  TH.hs  TypeHash.hs  Version.hs
dist-newstyle/tmp/src-3410/store-0.7.20/src/Data/Store/TH/: Internal.hs
dist-newstyle/tmp/src-3410/store-0.7.20/src/Data/Store/TypeHash/: Internal.hs
dist-newstyle/tmp/src-3410/store-0.7.20/src/System/IO/: ByteBuffer.hs
dist-newstyle/tmp/src-3410/store-0.7.20/test/: Allocations.hs
dist-newstyle/tmp/src-3410/store-0.7.20/test/Data/: StoreSpec.hs
dist-newstyle/tmp/src-3410/store-0.7.20/test/Data/Store/: UntrustedSpec.hs
dist-newstyle/tmp/src-3410/store-0.7.20/test/Data/StoreSpec/: TH.hs
dist-newstyle/tmp/src-3410/store-0.7.20/test/System/IO/: ByteBufferSpec.hs
dist-newstyle/tmp/src-3411/statistics-0.16.3.0/: statistics.cabal
src/bench/: Main.hs
src/test/: Main.hs
test/: Main.hs
